--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .DS_Store
 
+# Datasets
+classifier/datasets/movie_review_dataset/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
