--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.2",
     "axios": "^0.19.1",
+    "chart.js": "^2.9.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
