--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,13 @@
 
 # Datasets
 classifier/datasets/movie_review_dataset/
+classifier/datasets/germ_eval_dataset/
+
+# Classifiers
 classifier/*.pt
+
+# vscode
+.vscode/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
