connect ui with node and node with flask backend

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "abotkit.io",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "sqlite3": "^5.0.0"
   },
