--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-jss": "^10.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
