--- a/botkit/requirements.txt
+++ b/botkit/requirements.txt
@@ -1,6 +1,6 @@
 # Intent classification
 torch
-sentence-transformers==0.2.4.1
+sentence-transformers>=0.3,<0.4
 
 # Admin interface
 Flask==1.1.1
@@ -21,4 +21,6 @@ gdown==3.9.1
 
 #Tokenizer
 spacy==2.2.3
-transformers==2.3.0
+
+# Utils
+geotext
